--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	
 	compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.45'
+	runtime('com.h2database:h2')
 	
 	
 	compileOnly('org.projectlombok:lombok')
